# PetForDesktop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  PetDesktop.sln  PetDesktop.vcxproj  PetDesktop.vcxproj.filters  README.md  appicon.rc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  engine-feature-request.md  feature_request.md  gameplay-feature-request.md  gameplayt-feature-request.md
.github/workflows/: ReleaseToDiscord.yml  deploy_release.yml
content/pets/fox/: setting.yaml
content/pets/fox/animations/: sleep.yaml
content/setting/: animation.yaml  localization.yaml  setting.ini  setting.yaml
content/shader/: imageDx12.hlsl  spriteSheet.vs
content/shader/glsl/: dFdxEdgeDetection.fs  image.fs  image.vs  imageGreyScale.fs  spriteSheet.vs
content/shader/hlsl/: dFdxEdgeDetection_fs.hlsl  dFdxEdgeDetection_fs.hlsl.yaml  imageGreyScale_fs.hlsl  imageGreyScale_fs.hlsl.yaml  image_fs.hlsl  image_vs.hlsl  image_vs.hlsl.yaml  spriteSheet_vs.hlsl  spriteSheet_vs.hlsl.yaml
content/styles/: PetForDesktopStyle.ini
include/: Vector2.hpp  Vector2.inl  WindowUtility.h
include/Engine/: Canvas.hpp  ClassUtility.hpp  Define.hpp  FileExplorer.hpp  FileReader.hpp  Framebuffer.hpp  FramebufferDX12.hpp  FramebufferOGL.hpp  ImGuiTools.hpp  InteractionComponent.hpp  InteractionSystem.hpp  Localization.hpp  Log.hpp  Monitors.hpp  PetEditor.hpp  PetManager.hpp  PhysicComponent.hpp  PhysicSystem.hpp  Rect.hpp  ResourceManager.hpp  ScreenShoot.hpp  ScreenShooter.hpp  Settings.hpp  Shader.hpp  Singleton.hpp  SpriteAnimator.hpp  SpriteSheet.hpp  StateMachine.hpp  StylePanel.hpp  Texture.hpp  TextureDX12.hpp  TimeManager.hpp  Updater.hpp  Utilities.hpp  UtilitySystem.hpp  Vector2.hpp  Window.hpp  WindowGLFW.hpp  WindowOGL.hpp  WindowSDL.hpp
include/Engine/Graphics/: FramebufferDX12.hpp  FramebufferOGL.hpp  ScreenSpaceQuadDX12.hpp  ScreenSpaceQuadOGL.hpp  ShaderDX12.hpp  ShaderOGL.hpp  TextureDX12.hpp  TextureOGL.hpp  WindowDX12.hpp  WindowOGL.hpp
include/Game/: AnimationTransitions.hpp  Animations.hpp  ContextualMenu.hpp  DialoguePopUp.hpp  Game.hpp  GameData.hpp  Pet.hpp  SettingMenu.hpp  UIMenu.hpp  UpdateMenu.hpp
include/glad/: gl.h  glad.h
installer/: petForDesktop.iss
resources/setting/: setting.ini
resources/shader/: dFdxEdgeDetection.fs  gammaToLinear.fs  image.fs  image.vs  imageGreyScale.fs  spriteSheet.vs
src/: AnimationTransitions.cpp  Animations.cpp  CMakeLists.txt  ContextualMenu.cpp  FileExplorer.cpp  Localization.cpp  Monitor.cpp  Pet.cpp  SettingMenu.cpp  Settings.cpp  Texture.cpp  TextureDX12.cpp  TextureOGL.cpp  UIMenu.cpp  UpdateMenu.cpp  WindowDX12.cpp  WindowGLFW.cpp  WindowOGL.cpp  WindowSDL.cpp  glad.c  main.cpp
